[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nuclearmasses"
authors = [
  {name = "Ian Cullen"},
  {name = "Soham Pal"},
]
description = "A python package to parse and store the various files published by AME and NUBASE"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Topic :: Education",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "astropy",
  "numpy",
  "pandas",
  "pytest",
]
keywords = [
 "nuclear",
 "physics",
 "decay",
 "AME",
 "NUBASE",
]

[project.optional-dependencies]
dev = [
  "coverage",
  "mypy",
  "pandas-stubs",
]

[project.urls]
GitHub = "https://github.com/php1ic/nuclearmasses"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
include = ["nuclearmasses"]

[tool.setuptools.package-data]
nuclearmasses = [
 "data/1983/*.*", 
 "data/1993/*.*", 
 "data/1995/*.*", 
 "data/2003/*.*", 
 "data/2012/*.*", 
 "data/2016/*.*", 
 "data/2020/*.*", 
]

[tool.coverage.report]
omit = [
 "tests/*"
]

[tool.isort]
known_first_party = ["nuclearmasses"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
# Nothing different from defaults

[tool.ruff.lint.isort]
known-first-party = ["nuclearmasses"]
force-sort-within-sections = true

[tool.ruff.lint]
extend-select = [
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "W",  # pycodestyle warnings
  "I",  # isort
  "UP", # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
