[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nuclearmasses"
authors = [
  {name = "Ian Cullen"},
  {name = "Soham Pal"},
]
description = "A python package to parse and store the various files published by AME and NUBASE"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
  "Topic :: Education",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "astropy",
  "numpy",
  "pandas",
  "pytest",
]
keywords = [
 "nuclear",
 "physics",
 "decay",
 "half-life",
 "isotope",
 "nuclide",
 "radiation",
 "AME",
 "NUBASE",
]

[project.optional-dependencies]
dev = [
  "coverage",
  "mypy",
  "pandas-stubs",
]

[project.urls]
GitHub = "https://github.com/php1ic/nuclearmasses"
Changelog = "https://github.com/php1ic/nuclearmasses/blob/main/CHANGELOG.md"

[tool.setuptools]
license-files = ["LICENSE"]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
include = ["nuclearmasses"]

[tool.setuptools.package-data]
nuclearmasses = [
 "data/**/*"
]

[tool.coverage.report]
omit = [
 "tests/*"
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
# Nothing different from defaults

[tool.ruff.lint.isort]
known-first-party = ["src"]
from-first = false
order-by-type = true
force-sort-within-sections = true

[tool.ruff.lint]
extend-select = [
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "W",  # pycodestyle warnings
  "I",  # isort
  "UP", # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
